<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/contact_info_title"
        android:layout_width="274dp"
        android:layout_height="51dp"
        android:layout_marginTop="150dp"
        android:text="@string/contact_us"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/contact_email_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact_email_title"
        android:layout_width="389dp"
        android:layout_height="26dp"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_info_title" />

    <TextView
        android:id="@+id/contact_email_content"
        android:layout_width="389dp"
        android:layout_height="26dp"
        android:text="@string/contact_email"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_email_title" />

    <TextView
        android:id="@+id/contact_oh_title"
        android:layout_width="389dp"
        android:layout_height="26dp"
        android:layout_marginTop="40dp"
        android:text="@string/office_hours_title"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_email_content" />

    <TextView
        android:id="@+id/contact_oh_content"
        android:layout_width="389dp"
        android:layout_height="26dp"
        android:text="@string/office_hours_text"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_oh_title" />

    <Button
        android:id="@+id/back_button_contact"
        android:layout_width="139dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/orange"
        android:text="@string/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_oh_content" />
</androidx.constraintlayout.widget.ConstraintLayout>